# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
inc/: AABB.hpp  AHittable.hpp  ALight.hpp  AmbientLight.hpp  Application.hpp  BVH.hpp  BVHNode.hpp  BlinnPhongMaterial.hpp  Camera.hpp  Canvas.hpp  HitRecord.hpp  IMaterial.hpp  ITexture.hpp  ImageTexture.hpp  NormalMaterial.hpp  PointLight.hpp  Quaternion.hpp  Ray.hpp  RayTracer.hpp  Renderer.hpp  Scene.hpp  SkyboxMaterial.hpp  SolidColorTexture.hpp  Sphere.hpp  Texture.hpp  ThreadPool.hpp  Triangle.hpp  Vec2.hpp  Vec3.hpp  Window.hpp  raytracer.h
src/: AABB.cpp  AHittable.cpp  ALight.cpp  AmbientLight.cpp  Application.cpp  BVH.cpp  BVHNode.cpp  BlinnPhongMaterial.cpp  Camera.cpp  Canvas.cpp  HitRecord.cpp  ImageTexture.cpp  NormalMaterial.cpp  PointLight.cpp  Quaternion.cpp  Ray.cpp  RayTracer.cpp  Renderer.cpp  Scene.cpp  SkyboxMaterial.cpp  SolidColorTexture.cpp  Sphere.cpp  Texture.cpp  ThreadPool.cpp  Triangle.cpp  Vec2.cpp  Vec3.cpp  Window.cpp  initialize_sdl.cpp  main.cpp  run_event_loop.cpp  sdl_init.cpp
